[gd_scene load_steps=15 format=3 uid="uid://dnmu3yex6w4l5"]

[ext_resource type="Script" path="res://Base/Weapons/test_ak.gd" id="1_8pqdj"]
[ext_resource type="Texture2D" uid="uid://bglunfovnwlg8" path="res://Ass/ak_notf_32.png" id="2_hgsq3"]
[ext_resource type="Texture2D" uid="uid://cw0qjoswmpwjp" path="res://Ass/2d_lights_and_shadows_neutral_point_light.webp" id="3_7e60f"]
[ext_resource type="AudioStream" uid="uid://bejfwbj5klemw" path="res://Ass/test_ak_shot.wav" id="3_h5nv8"]
[ext_resource type="Texture2D" uid="uid://dha3nqbuvaf6w" path="res://Ass/ggv2/akv2.png" id="5_f5puc"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jyku4"]

[sub_resource type="Animation" id="Animation_k7poe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TestGun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jyooc"]
resource_name = "shot_light"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TestGun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(24, -6), Vector2(16, -6), Vector2(24, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_utbnq"]
_data = {
"RESET": SubResource("Animation_k7poe"),
"shot_light": SubResource("Animation_jyooc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_w2hwp"]
atlas = ExtResource("5_f5puc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ys6t"]
atlas = ExtResource("5_f5puc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrjgr"]
atlas = ExtResource("5_f5puc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjq8m"]
atlas = ExtResource("5_f5puc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gq6to"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2hwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ys6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrjgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjq8m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="TestAk" type="Node2D"]
script = ExtResource("1_8pqdj")

[node name="TestGun" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, -6)
scale = Vector2(2, 2)
texture = ExtResource("2_hgsq3")

[node name="shot_snd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h5nv8")
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="from" type="Marker2D" parent="."]
position = Vector2(85, 8)

[node name="to" type="Marker2D" parent="."]
position = Vector2(96, 8)

[node name="TestAk2" type="Sprite2D" parent="."]
position = Vector2(24, -8)
scale = Vector2(2, 2)
texture = SubResource("CompressedTexture2D_jyku4")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(56, -8)
scale = Vector2(0.640625, 0.626065)
enabled = false
color = Color(1, 1, 0.396078, 1)
texture = ExtResource("3_7e60f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_utbnq")
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.125

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(48, 8)
scale = Vector2(2.3125, 2.3125)
sprite_frames = SubResource("SpriteFrames_gq6to")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
